Tweak layout in section 1 to ensure text is readable: up to 700px.

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -219,6 +219,7 @@ aside {
     font-family: "Georgia", serif;
     font-size: 3.2em;
     line-height: 1.62;
+    margin-top: 6.8em;
     position: static;
     text-align: right;
 }
